# vkit

./: .editorconfig  .envrc  .gitignore  CLA.md  CODE_OF_CONDUCT.md  LICENSE  LICENSE.txt  LICENSE_COMMERCIAL.txt  LICENSE_NOTICE  LICENSE_OSS.txt  LICENSE_SSPL.txt  README.md  pyrightconfig.json  setup.cfg
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: auto-upgrade-pyright.yaml  ci.yaml  procedure-auto-upgrade-pyright.yaml  procedure-pull-request.yaml  procedure-release-api-reference-nightly.yaml  procedure-release-api-reference-stable.yaml  procedure-release-wheel-nightly.yaml  procedure-release-wheel-stable.yaml  procedure-test-every-hour.yaml  publish-to-github-page.yaml  push-to-pypi.yaml  release-nightly.yaml  release-stable.yaml  release-website-nightly.yaml  release-website-stable.yaml  schedule.yaml  test.yaml  type-checking.yaml  workflow-alarm.yaml  workflow-publish-api-reference.yaml  workflow-push-wheel-to-pypi.yaml  workflow-test.yaml  workflow-type-checking.yaml
docs/: docusaurus.config.js  sidebars.js
docs/docs/: introduction.md
docs/docs/feature/geometric-distortion/: affine.md  camera.md  example.md  interface.md  mls.md
docs/docs/feature/photometric-distortion/: color.md  example.md  interface.md  noise.md
docs/docs/utility/: image.md  label.md
docs/i18n/zh/docusaurus-plugin-content-docs/: current.json
docs/i18n/zh/docusaurus-plugin-content-docs/current/: introduction.md
docs/i18n/zh/docusaurus-theme-classic/: footer.json  navbar.json
tests/: opt.py
tests/.approval-hash/element/test_image.py/test_image_setitem_box/: 0.jpg.txt
tests/.approval-hash/element/test_image.py/test_image_setitem_mask/: edge_mask.jpg.txt  mask.jpg.txt  masked_cheems.jpg.txt
tests/.approval-hash/element/test_image.py/test_image_setitem_polygon/: 0.jpg.txt
tests/.approval-hash/element/test_mask.py/test_mask_setitem_box/: 0.jpg.txt  1.jpg.txt  boxed_mask.jpg.txt  distinct.jpg.txt  intersect.jpg.txt
tests/.approval-hash/element/test_mask.py/test_mask_setitem_polygon/: 0.jpg.txt  1.jpg.txt  distinct.jpg.txt  intersect.jpg.txt  union.jpg.txt
tests/.approval-hash/element/test_painter.py/test_painter/: paint_boxes.jpg.txt  paint_boxes_no_filled.jpg.txt  paint_boxes_no_filled2.jpg.txt  paint_lines.jpg.txt  paint_lines_t10_arrow.jpg.txt  paint_lines_t10_arrow_0.5.jpg.txt  paint_mask.jpg.txt  paint_points.jpg.txt  paint_points_r3_index.jpg.txt  paint_polygons.jpg.txt  paint_score_map.jpg.txt
tests/.approval-hash/element/test_score_map.py/test_score_map_setitem_box/: 0.jpg.txt  1.jpg.txt  distinct.jpg.txt  intersect.jpg.txt  keep_max.jpg.txt  keep_min.jpg.txt  union.jpg.txt
tests/.approval-hash/element/test_score_map.py/test_score_map_setitem_mask/: conducted.jpg.txt  full.jpg.txt
tests/.approval-hash/element/test_score_map.py/test_score_map_setitem_polygon/: 0.jpg.txt  1.jpg.txt  2.jpg.txt
tests/.approval-hash/engine/test_camera.py/test_camera_model/: x-neg-10.jpg.txt  (+72 more)
tests/element/: test_box.py  test_image.py  test_mask.py  test_painter.py  test_polygon.py  test_score_map.py
tests/engine/: test_barcode.py  test_camera.py  test_char_heatmap.py  test_char_sampler.py  test_font.py  test_geometric_distortion.py  test_image.py  test_photometric_distortion.py  test_random_distortion.py  test_seal_impression.py
tests/mechanism/: test_geometric_distortion.py  test_photometric_distortion.py  test_random_distortion.py
tests/pipeline/: test_cattrs.py  test_page_text_region_label.py  test_pipeline.py  test_queue.py
tests/text/: test_char_sampler.py
tests/utility/: __init__.py  pool.py  test_opt.py  test_pool.py  test_proxy_method.py
vkit/: __init__.py
vkit/element/: __init__.py  box.py  cropper.py  image.py  lexicon.py  line.py  mask.py  opt.py  painter.py  point.py  polygon.py  score_map.py  type.py  uniqueness.py
vkit/engine/: interface.py
vkit/engine/barcode/: __init__.py  code39.py  qr.py  type.py
vkit/engine/char_and_font_sampler/: __init__.py
vkit/engine/char_heatmap/: __init__.py  default.py  type.py
vkit/engine/char_mask/: __init__.py  default.py  external_ellipse.py  type.py
vkit/engine/char_sampler/: __init__.py  corpus.py  datetime.py  faker.py  func_collate.py  lexicon.py  type.py
vkit/engine/distortion/: __init__.py  interface.py
vkit/engine/distortion/geometric/: affine.py  camera.py  mls.py
vkit/engine/distortion/photometric/: blur.py  color.py  effect.py  noise.py  opt.py  streak.py
vkit/engine/distortion_policy/: opt.py  random_distortion.py  type.py
vkit/engine/distortion_policy/geometric/: affine.py  camera.py  mls.py
vkit/engine/distortion_policy/photometric/: blur.py  color.py  effect.py  noise.py  streak.py
vkit/engine/font/: __init__.py  freetype.py  type.py
vkit/engine/image/: __init__.py  combiner.py  selector.py  type.py
vkit/engine/seal_impression/: __init__.py  char_slot_filler.py  ellipse.py  text_line_slot_filler.py  type.py
vkit/mechanism/: cropper.py  painter.py
vkit/mechanism/distortion/: interface.py
vkit/mechanism/distortion/geometric/: affine.py  camera.py
vkit/mechanism/distortion/photometric/: blur.py  effect.py  opt.py
vkit/mechanism/distortion_policy/: __init__.py  opt.py  random_distortion.py  type.py
vkit/mechanism/distortion_policy/geometric/: affine.py  camera.py  mls.py
vkit/mechanism/distortion_policy/photometric/: blur.py  color.py  effect.py  noise.py  streak.py
vkit/pipeline/: __init__.py  interface.py  pool.py
vkit/pipeline/text_detection/: page_assembler.py  page_background.py  page_barcode.py  page_cropping.py  page_distortion.py  page_image.py  page_layout.py  page_non_text_symbol.py  page_qrcode.py  page_resizing.py  page_seal_impression.py  page_shape.py  page_text_line.py  page_text_line_bounding_box.py  page_text_line_label.py  page_text_region.py  page_text_region_cropping.py  page_text_region_label.py  page_text_region_stacking.py
vkit/utility/: __init__.py  opt.py  pool.py  type.py
vkit/utility/text/: __init__.py  opt.py
vkit/utility/text/const/: chinese.py  cjk_compatibility_ideograph.py  delimiter.py  digit.py  english.py  whitespace.py
(+927 files in other folders)
