[metadata]
name = vkit
version = 22.3.0
author = Hunt Zhan
author_email = huntzhan@vkit-x.com
description = Boosting Document Intelligence
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vkit-x/vkit
license = Commercial or SSPL
license_files =
    LICENSE.txt
    LICENSE_COMMERCIAL.txt
    LICENSE_SSPL.txt

[options]
packages = find:
python_requires = >= 3.8.0, < 3.12
install_requires =
    opencv-python-headless >= 4.5.1.48 ; python_version < '3.10'
    opencv-python-headless >= 4.5.4.58 ; python_version >= '3.10'

    numpy >= 1.21.0 ; python_version < '3.10'
    numpy >= 1.21.2 ; python_version >= '3.10'

    # Used in image I/O.
    Pillow >= 8.0.0 ; python_version < '3.10'
    Pillow >= 8.3.2 ; python_version >= '3.10'

    # Vatti clipping.
    pyclipper >= 1.2.1

    # TODO: Migrate to Shapely 2.0 once it is released.
    Shapely >= 1.8.1, < 2.0

    # KDTree.
    scikit-learn >= 1.0.1

    # Used in text.
    intervaltree >= 3.0.0

    # Used in char sampler.
    pytz >= 2021.3
    Faker >= 13.3.1

    # Font rendering.
    freetype-py >= 2.1.0

    # Barcode rendering.
    python-barcode >= 0.14.0

    # For PageTextRegionStep.
    rectpack ~= 0.2.2

    # Pool management.
    psutil >= 5.9.1

    # Data type.
    attrs >= 21.3.0
    cattrs >= 22.1.0

    # CLI & I/O.
    fireball >= 0.9.3
    iolite >= 22.2.0

    # Collect usage information.
    vkit-collect-usage-information >= 22.1.0

[options.extras_require]
dev =
    build >= 0.2.1
    # pytest-parallel is not compatible with the latest pytest.
    # https://github.com/browsertron/pytest-parallel/issues/118
    pytest >= 6.1.2, < 7.2.0
    pytest-parallel >= 0.1.1
    pytest-env >= 0.8.1
    yapf >= 0.30.0
    flake8 >= 3.8.4
    twine >= 3.2.0
    ipython >= 7.20.0
    pdbpp >= 0.10.2
    rope >= 0.18.0
    pdoc >= 12.2.0

[options.packages.find]
include =
    vkit*

# Code linting.
[flake8]
max-line-length = 100

ignore =
    # From AllenNLP
    # these rules don't play well with black
    # whitespace before :
    E203
    # line break before binary operator
    W503

    # From Yapf
    # indentation is not a multiple of four,
    E111
    E114
    # visually indented line with same indent as next logical line,
    E129

exclude =
    build/**
    dist/**
    data/**
    doc/**

per-file-ignores =
    # __init__.py files are allowed to have unused imports and lines-too-long
    */__init__.py:F401
    */**/**/__init__.py:F401,E501

    # tests don't have to respect
    #  E731: do not assign a lambda expression, use a def
    #  F403: from module import *’ used; unable to detect undefined names
    #  F405: name may be undefined, or defined from star imports: module
    tests/**:E731,F403,F405

    # scripts don't have to respect
    #  E402: imports not at top of file (because we mess with sys.path)
    scripts/**:E402

# Code formatting.
[yapf]
based_on_style = google
column_limit = 100
dedent_closing_brackets = true
coalesce_brackets = true
split_before_bitwise_operator = true
split_before_arithmetic_operator = true
split_before_logical_operator = true
align_closing_bracket_with_visual_indent = true
allow_multiline_lambdas = true

# Test.
[tool:pytest]
env =
    DISABLE_VKIT_COLLECT_USAGE_INFORMATION=1
log_level = DEBUG
markers =
    local: only for local dev test.
addopts =
    -m 'not local'
    --workers auto
